--- a/src/styles/generic/generic.fonts.scss
+++ b/src/styles/generic/generic.fonts.scss
@@ -1,71 +1,31 @@
-@font-face {
-  font-display: block;
-  font-family: 'Lexend';
-  font-style: normal;
-  font-weight: 100;
-  src: url('static/fonts/Lexend-Thin.ttf') format('truetype');
-}
+// @font-face {
+//   font-display: block;
+//   font-family: 'MarckScript';
+//   font-style: normal;
+//   font-weight: 400;
+//   src: url('static/fonts/MarckScript/MarckScript-Regular.ttf') format('truetype');
+// }
 
 @font-face {
   font-display: block;
-  font-family: 'Lexend';
-  font-style: normal;
-  font-weight: 200;
-  src: url('static/fonts/Lexend-ExtraLight.ttf') format('ttf');
-}
-
-@font-face {
-  font-display: block;
-  font-family: 'Lexend';
-  font-style: normal;
-  font-weight: 300;
-  src: url('static/fonts/Lexend-Light.ttf') format('truetype');
-}
-
-@font-face {
-  font-display: block;
-  font-family: 'Lexend';
+  font-family: 'FuzzyBubbles';
   font-style: normal;
   font-weight: 400;
-  src: url('static/fonts/Lexend-Regular.ttf') format('truetype');
+  src: url('static/fonts/FuzzyBubbles/FuzzyBubbles-Regular.ttf') format('truetype');
 }
 
 @font-face {
   font-display: block;
-  font-family: 'Lexend';
-  font-style: normal;
-  font-weight: 500;
-  src: url('static/fonts/Lexend-Medium.ttf') format('truetype');
-}
-
-@font-face {
-  font-display: block;
-  font-family: 'Lexend';
-  font-style: normal;
-  font-weight: 600;
-  src: url('static/fonts/Lexend-SemiBold.ttf') format('truetype');
-}
-
-@font-face {
-  font-display: block;
-  font-family: 'Lexend';
+  font-family: 'FuzzyBubbles';
   font-style: normal;
   font-weight: 700;
-  src: url('static/fonts/Lexend-Bold.ttf') format('truetype');
+  src: url('static/fonts/FuzzyBubbles/FuzzyBubbles-Bold.ttf') format('truetype');
 }
 
-@font-face {
-  font-display: block;
-  font-family: 'Lexend';
-  font-style: normal;
-  font-weight: 800;
-  src: url('static/fonts/Lexend-ExtraBold.ttf') format('truetype');
-}
-
-@font-face {
-  font-display: block;
-  font-family: 'Lexend';
-  font-style: normal;
-  font-weight: 900;
-  src: url('static/fonts/Lexend-Black.ttf') format('truetype');
-}
+// @font-face {
+//   font-display: block;
+//   font-family: 'TwinkleStar';
+//   font-style: normal;
+//   font-weight: 400;
+//   src: url('static/fonts/TwinkleStar/TwinkleStar-Regular.ttf') format('truetype');
+// }
