--- a/src/components/c-radiogroup/c-radiogroup.style.scss
+++ b/src/components/c-radiogroup/c-radiogroup.style.scss
@@ -1,5 +1,61 @@
-@use '../../styles/tools/tools.margins.scss';
+@use '../../styles/tools/tools.margins.scss' as *;
+@use '../../styles/tools/tools.typography.scss' as *;
 
 .c-radiogroup {
   display: block;
+
+  &__label {
+    @include text;
+    display: block;
+    text-align: left;
+    padding-left: space(1);
+    margin: 0 0 space(1);
+    color: var(--color-gray--dark);
+  }
+
+  &__items {
+    display: flex;
+    flex-wrap: wrap;
+    gap: space(1);
+  }
+
+  &__input {
+    @include text;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    border: 2px solid var(--color-gray--light);
+    border-radius: var(--border-radius);
+    padding: space(1);
+    min-width: space(10);
+    min-height: space(4);
+    cursor: pointer;
+    transition: transform 0.2s;
+
+    input:checked + & {
+      border-color: var(--color-green);
+    }
+
+    input:focus + & {
+      outline-color: var(--color-purple--medium);
+    }
+
+    &:focus {
+      box-shadow: none;
+      -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+      outline-color: var(--color-purple--medium);
+    }
+
+    &:active {
+      -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+      transform: scale(0.90);
+    }
+  }
+
+  input {
+    width: 0;
+    height: 0;
+    position: absolute;
+    left: -9999px;
+  }
 }
