--- a/src/elements/e-input/e-input.style.scss
+++ b/src/elements/e-input/e-input.style.scss
@@ -1,5 +1,40 @@
-@use '../../styles/tools/tools.margins.scss';
+@use '../../styles/tools/tools.margins.scss' as *;
+@use '../../styles/tools/tools.typography.scss' as *;
 
 .e-input {
-  display: block;
+  &__label {
+    @include text;
+    display: block;
+    text-align: left;
+    padding-left: space(1);
+    color: var(--color-gray--dark);
+    margin-bottom: space(1);
+  }
+
+  &__input {
+    @include text;
+    color: var(--color-gray--dark);
+    width: 100%;
+    box-sizing: border-box;
+    padding: space(1);
+    border-radius: var(--border-radius);
+    border: 1px solid var(--border-color);
+    outline: 2px solid transparent;
+    transition: outline-color 0.2s;
+
+    &:-webkit-autofill,
+    &:-webkit-autofill:hover, 
+    &:-webkit-autofill:focus, 
+    &:-webkit-autofill:active {
+      @include text;
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: var(--color-gray--dark);
+      transition: background-color 5000s ease-in-out 0s;
+      box-shadow: inset 0 0 20px 20px #ffffff;
+    }
+
+    &:focus {
+      outline-color: var(--color-purple--medium);
+    }
+  }
 }
