--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,7 +3,13 @@
 @use './variables/variables.grid.scss';
 @use './variables/variables.fonts.scss';
 @use './variables/variables.colors.scss';
+@use './variables/variables.borders.scss';
 @use './variables/variable.transition.scss';
 
 @use './generic/generic.base.scss';
 @use './generic/generic.fonts.scss';
+
+@use './tools/tools.grid.scss';
+@use './tools/tools.margins.scss';
+@use './tools/tools.transition.scss';
+@use './tools/tools.typography.scss';
