--- a/src/styles/variables/variables.colors.scss
+++ b/src/styles/variables/variables.colors.scss
@@ -1,14 +1,13 @@
 html {
-  --color-primary: #fae3d9;
-  --color-secondary: #bbded6;
-  --color-red: #ffb6b9;
-  --color-blue: #8ac6d1;
-  --color-yellow: #fae3d9;
-  --color-light: #fffaf8;
-  --color-success: #00a400;
-  --color-error: #ff2222;
-  --color-gray: #ccc;
-  --color-gray--medium: #4d4d4d;
-  --color-white: #ffffff;
-  --color-black: #000;
-};
+  --color-white: #FFFFFF;
+  --color-gray--light: #F5F5F5;
+  --color-gray--medium: #C4C4C4;
+  --color-gray--dark: #4d4d4d;
+  --color-pink: #FADADD;
+  --color-purple: #E6E0F8;
+  --color-purple--medium: #D5C6E6;
+  --color-yellow: #FFF5CC;
+  --color-green: #D9F1DB;
+  --color-peach: #FFE5D4;
+  --color-blue: #DCEFFD;
+}
