--- a/src/views/v-home/v-home.style.scss
+++ b/src/views/v-home/v-home.style.scss
@@ -1,15 +1,57 @@
-@use '../../styles/tools/tools.margins.scss';
+@use '../../styles/tools/tools.margins.scss' as *;
+@use '../../styles/tools/tools.typography.scss' as *;
 
 .v-home {
-  padding: 0 space(1);
+  display: flex;
+  align-items: center;
+  padding: 0 space(2);
   width: 100%;
   height: 100%;
+  box-sizing: border-box;
 
   &__wrapper {
+    display: flex;
+    flex-direction: column;
+    padding: space(2);
     max-width: var(--width-wrapper);
     width: 100%;
+    height: 80%;
     margin: 0 auto;
-    text-align: center;
+    box-sizing: border-box;
+    border-radius: var(--border-radius);
+    box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2);
+  }
+
+  &__title {
+    @include heading--h3;
+    color: var(--color-gray--dark);
+    margin-top: 0;
+    margin-bottom: space(2);
+  }
+
+  &__description {
+    @include text;
+    color: var(--color-gray--dark);
+    margin-top: 0;
+    margin-bottom: space(2);
+  }
+
+  &__form {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    row-gap: 32px;
+    height: 100%;
+    overflow-y: auto;
+    box-sizing: border-box;
+  }
+
+  &__actions {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    width: 100%;
+    margin-top: auto;
   }
 
   .hide {
