--- a/src/views/v-home/v-home.style.scss
+++ b/src/views/v-home/v-home.style.scss
@@ -52,6 +52,10 @@
     justify-content: space-between;
     width: 100%;
     margin-top: auto;
+
+    e-button:only-of-type {
+      margin-left: auto;
+    }
   }
 
   .hide {
