--- a/src/elements/e-select/e-select.style.scss
+++ b/src/elements/e-select/e-select.style.scss
@@ -18,6 +18,7 @@
   &__input {
     @include text;
     color: var(--color-gray--dark);
+    background-color: var(--color-white);
     width: 100%;
     box-sizing: border-box;
     padding: space(1);
