--- a/src/styles/variables/variables.colors.scss
+++ b/src/styles/variables/variables.colors.scss
@@ -1,13 +1,9 @@
 html {
-  --color-white: #FFFFFF;
-  --color-gray--light: #F5F5F5;
-  --color-gray--medium: #C4C4C4;
-  --color-gray--dark: #4d4d4d;
-  --color-pink: #FADADD;
-  --color-purple: #E6E0F8;
-  --color-purple--medium: #D5C6E6;
-  --color-yellow: #FFF5CC;
-  --color-green: #D9F1DB;
-  --color-peach: #FFE5D4;
-  --color-blue: #DCEFFD;
+  --color-white: 255, 255, 255;
+  --color-black: 0, 0, 0;
+  --color-primary: 149, 56, 69;
+  --color-gray: 77, 77, 77;
+  --color-gray--medium: 192, 192, 192;
+  --color-gray--light: 196, 196, 196;
+  --color-gray--light-extra: 207, 207, 207;
 }
