--- a/src/components/c-radiogroup/c-radiogroup.style.scss
+++ b/src/components/c-radiogroup/c-radiogroup.style.scss
@@ -5,45 +5,35 @@
   display: block;
 
   &__label {
-    @include text;
+    @include text(700);
     display: block;
     text-align: left;
-    padding-left: space(1);
-    margin: 0 0 space(1);
-    color: var(--color-gray--dark);
+    margin: 0 0 space(5);
+    color: rgba(var(--color-gray), 1);
   }
 
   &__items {
     display: flex;
     flex-wrap: wrap;
-    gap: space(1);
+    gap: space(5);
   }
 
   &__input {
-    @include text;
+    @include text--large(700);
+    color: rgba(var(--color-gray), 1);
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    border: 2px solid var(--color-gray--light);
-    border-radius: var(--border-radius);
-    padding: space(1);
-    min-width: space(10);
-    min-height: space(4);
+    flex: 1 0 auto;
+    border: 2px solid rgba(var(--color-gray--medium), 1);
+    border-radius: 8px;
+    padding: space(7);
     cursor: pointer;
-    transition: transform 0.2s;
+    transition: transform 0.2s, background-color 0.2s, border-color 0.2s;
 
     input:checked + & {
-      border-color: var(--color-green);
-    }
-
-    input:focus + & {
-      outline-color: var(--color-purple--medium);
-    }
-
-    &:focus {
-      box-shadow: none;
-      -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-      outline-color: var(--color-purple--medium);
+      border-color: rgba(var(--color-primary), 1);
+      background-color: rgba(var(--color-primary), 0.11);
     }
 
     &:active {
