--- a/src/elements/e-select/e-select.style.scss
+++ b/src/elements/e-select/e-select.style.scss
@@ -7,47 +7,42 @@
   box-sizing: border-box;
 
   &__label {
-    @include text;
+    @include text(400);
     display: block;
     text-align: left;
     padding-left: space(1);
-    color: var(--color-gray--dark);
+    color: rgba(var(--color-gray), 1);
     margin-bottom: space(1);
   }
 
   &__input {
-    @include text;
-    color: var(--color-gray--dark);
-    background-color: var(--color-white);
+    @include text--large(700);
+    font-family: inherit;
+    color: rgba(var(--color-gray), 1);
+    background-color: rgba(var(--color-white), 1);
     width: 100%;
     box-sizing: border-box;
     padding: space(1);
-    border-radius: var(--border-radius);
-    border: 1px solid var(--border-color);
-    outline: 2px solid transparent;
+    border-radius: 8px;
+    border: 1px solid rgba(var(--color-gray--medium), 1);
     appearance: none;
     -moz-appearance: none;
     -webkit-appearance: none;
-    transition: outline-color 0.2s;
 
     &:-webkit-autofill,
     &:-webkit-autofill:hover, 
     &:-webkit-autofill:focus, 
     &:-webkit-autofill:active {
-      @include text;
+      @include text--large(700);
       -webkit-background-clip: text;
-      -webkit-text-fill-color: var(--color-gray--dark);
+      -webkit-text-fill-color: rgba(var(--color-gray), 1);
       transition: background-color 5000s ease-in-out 0s;
       box-shadow: inset 0 0 20px 20px #ffffff;
-    }
-
-    &:focus {
-      outline-color: var(--color-purple--medium);
     }
   }
 
   &__icon {
-    --eIconColor: var(--border-color);
+    --eIconColor: var(--color-gray--medium);
     position: absolute;
     right: space(1);
     bottom: 0;
