--- a/src/views/v-home/v-home.style.scss
+++ b/src/views/v-home/v-home.style.scss
@@ -2,48 +2,58 @@
 @use '../../styles/tools/tools.typography.scss' as *;
 
 .v-home {
-  display: flex;
-  align-items: center;
-  padding: 0 space(2);
+  padding: space(6) space(5);
   width: 100%;
   height: 100%;
+  text-align: center;
   box-sizing: border-box;
 
-  &__wrapper {
-    display: flex;
-    flex-direction: column;
-    padding: space(2);
-    max-width: var(--width-wrapper);
-    width: 100%;
-    height: 80%;
-    margin: 0 auto;
-    box-sizing: border-box;
-    border-radius: var(--border-radius);
-    box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2);
+  &__topimage {
+    max-width: 100%;
+    height: auto;
+    margin-top: -50%;
+    margin-bottom: space(6);
   }
 
   &__title {
-    @include heading--h3;
-    color: var(--color-gray--dark);
+    @include heading--xl;
+    color: rgba(var(--color-primary), 1);
     margin-top: 0;
-    margin-bottom: space(2);
+    margin-bottom: space(5);
+    padding-bottom: space(5);
+    border-bottom: 1px solid rgba(var(--color-primary), 1);
+
+    &--l {
+      @include heading--l;
+    }
   }
 
   &__description {
-    @include text;
-    color: var(--color-gray--dark);
-    margin-top: 0;
-    margin-bottom: space(2);
+    margin-bottom: space(6);
+
+    p {
+      @include text;
+      color: rgba(var(--color-gray), 1);
+      margin-top: 0;
+      margin-bottom: space(4);
+    }
+  }
+
+  &__wrapper {
+    box-sizing: border-box;
+    border-radius: 10px;
+    padding: space(5) space(3);
+    box-shadow: 0px 4px 27px 0px rgba(var(--color-black), 0.2);
   }
 
   &__form {
-    display: flex;
-    flex-direction: column;
     position: relative;
-    row-gap: 32px;
-    height: 100%;
-    overflow-y: auto;
-    box-sizing: border-box;
+    z-index: 1;
+  }
+
+  &__field {
+    display: block;
+    margin-bottom: space(8);
   }
 
   &__actions {
@@ -52,10 +62,21 @@
     justify-content: space-between;
     width: 100%;
     margin-top: auto;
-
+    
     e-button:only-of-type {
       margin-left: auto;
     }
+  }
+
+  &__bottomimage {
+    max-width: 100%;
+    height: auto;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    transform: translateY(60%);
+    z-index: 0;
   }
 
   .hide {
