--- a/src/styles/variables/variables.colors.scss
+++ b/src/styles/variables/variables.colors.scss
@@ -6,4 +6,5 @@ html {
   --color-gray--medium: 192, 192, 192;
   --color-gray--light: 196, 196, 196;
   --color-gray--light-extra: 207, 207, 207;
+  --color-gray--bg: 251, 251, 251;
 }
